calculator layout created with classes to support event listener(s)

--- a/calculator.html
+++ b/calculator.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="calculator.js"></script>
+    <script src="calculator.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display">
+            <p>0</p>
+        </div>
+        <div class="button-row">
+            <button class="clear" id="clear">AC</button>
+            <button class="alteration" id="negative">+/-</button>
+            <button class="alteration" id="percent">%</button>
+            <button class="operand" id="divide">/</button>
+        </div>
+        <div class="button-row">
+            <button class="number" id="7">7</button>
+            <button class="number" id="8">8</button>
+            <button class="number" id="9">9</button>
+            <button class="operand" id="multiply">x</button>
+        </div>
+        <div class="button-row">
+            <button class="number" id="4">4</button>
+            <button class="number" id="5">5</button>
+            <button class="number" id="6">6</button>
+            <button class="operand" id="subtract">-</button>
+        </div>
+        <div class="button-row">
+            <button class="number" id="1">1</button>
+            <button class="number" id="2">2</button>
+            <button class="number" id="3">3</button>
+            <button class="operand" id="plus">+</button>
+        </div>
+        <div class="button-row">
+            <button class="number" id="0">0</button>
+            <button class="number" id="00">00</button>
+            <button class="number" id=".">.</button>
+            <button class="operand" id="equals">=</button>
+        </div>
+    </div>
 </body>
 </html>
