calculator is styled and fully functional
l;aksdjf

--- a/calculator.html
+++ b/calculator.html
@@ -34,13 +34,13 @@
             <button class="number" id="1">1</button>
             <button class="number" id="2">2</button>
             <button class="number" id="3">3</button>
-            <button class="operand" id="plus">+</button>
+            <button class="operand" id="add">+</button>
         </div>
         <div class="button-row">
             <button class="number" id="0">0</button>
             <button class="number" id="00">00</button>
             <button class="number" id=".">.</button>
-            <button class="operand" id="equals">=</button>
+            <button class="equals" id="equals">=</button>
         </div>
     </div>
 </body>
